# CS5340_Bert_CRF

./: CRF_biased_domain_knowledge.ipynb  CRF_domain_knowledge.ipynb  CRF_wholistic_domain_knowledge.ipynb  CS5340_CRF.ipynb  README.md  crf_with_binary_features.ipynb  domain_knowledge_explore.ipynb  ner-model.crfsuite
bert-crf/: ner_experiments.ipynb  pyproject.toml  requirements.txt  unzip_data.sh
bert-crf/re_utils/: train.py
bert-crf/resources/data/test/: label2id.json  labeled_texts.jsonl  relations.jsonl  retag2id.json
bert-crf/resources/data/train/: label2id.json  masked_texts.jsonl  relations.jsonl  retag2id.json
bert-crf/scripts/: tokenize_texts.py
bertcrfnbcom/: Preprocessing.ipynb  bertcrf-combine_10.ipynb  bertcrf-combine_25.ipynb  bertcrf-combine_50.ipynb  bertcrf-combine_full.ipynb  bertcrfcombine.ipynb  requirements.txt  setup.py
crf/: CRF_biased_domain_knowledge.ipynb  CRF_test_biased_dk.ipynb  CRF_test_unbiased_dk.ipynb  CRF_test_whole_dk.ipynb  CRF_unbiased_domain_knowledge.ipynb  CRF_wholistic_domain_knowledge.ipynb  pure_crf.ipynb
domain_knowledge/: biased_domain_knowledge.json  domain_knowledge_explore.ipynb  unbiased_domain_knowledge.json  wholistic_domain_knowledge.json
model/: ner-model-biased-domain-10.crfsuite  ner-model-biased-domain-25.crfsuite  ner-model-biased-domain-full.crfsuite  ner-model-biased-domain-half.crfsuite  ner-model-domain-10.crfsuite  ner-model-domain-25.crfsuite  ner-model-unbiased-domain-full.crfsuite  ner-model-unbiased-domain-half.crfsuite  ner-model-wholistic-10.crfsuite  ner-model-wholistic-25.crfsuite  (+3 more)
(+19 files in other folders)
