[tool.poetry]
name = "bert-crf"
version = "0.1.0"
description = ""
authors = ["Yuxuan1998 <hanyuxuan19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
transformers = "^4.39.2"
torch = "^2.2.2"
datasets = "^2.18.0"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
tqdm = "^4.66.2"
nltk = "^3.8.1"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
